setup enriorment for cloud9

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "yelpclone",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +11,15 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express.js": "^1.0.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Troykaka666/expressProject.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Troykaka666/expressProject/issues"
+  },
+  "homepage": "https://github.com/Troykaka666/expressProject#readme",
+  "description": ""
 }
