--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "^2.6.1",
     "express-session": "^1.15.6",
     "express.js": "^1.0.0",
+    "method-override": "^3.0.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1"
